[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "0.23.4"
tokio-native-tls = "0.3.1"
webpki = "0.22.4"
webpki-roots = "0.26.1"
tokio = { version = "1.24.2", features = ["full"] }
native-tls = "0.2.11"

